Added SEO Optimization

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Vijay Kumar Reddy</title>
+    <meta name="description"
+      content="I'm Vijay Kumar Reddy, a Full Stack Developer specialized in MERN stack development.Just take a look at my portfolio which showcases my projects and skills in React, TailwindCSS, Node.js, and MongoDB. Visit now to explore my work!" />
+    <meta name="keywords"
+      content="Vijay , Vijay Kumar , Vijay Kumar Reddy , Vijay Kumar Reddy Talakola , Talakola Vijay ,Talakola Vijay Kumar  ,Talakola Vijay Kumar Reddy , Developer , MERN stack , Full Stack Developer, Portfolio" />
+    <meta name="author" content="Vijay Kumar Reddy" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <meta property="og:title" content="Vijay's Portfolio" />
+    <meta property="og:description"
+      content="I'm Vijay Kumar Reddy, a Full Stack Developer specializing in MERN stack development.Just take a look at my portfolio which showcasies my projects and skills in React, TailwindCSS, Node.js, and MongoDB. Visit now to explore my work!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://talakolavijay.netlify.app/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
