--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="I'm Vijay Kumar Reddy, a Full Stack Developer specialized in MERN stack development.Just take a look at my portfolio which showcases my projects and skills in React, TailwindCSS, Node.js, and MongoDB. Visit now to explore my work!" />
-    <meta name="keywords" content="Vijay , Vijay Kumar , Vijay Kumar Reddy , Vijay Kumar Reddy Talakola , Talakola Vijay ,Talakola Vijay Kumar  ,Talakola Vijay Kumar Reddy , Developer , MERN stack , Full Stack Developer, Portfolio" />
-    <meta name="author" content="Vijay Kumar Reddy" />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta property="og:title" content="Vijay's Portfolio" />
-    <meta property="og:description" content="I'm Vijay Kumar Reddy, a Full Stack Developer specializing in MERN stack development.Just take a look at my portfolio which showcasies my projects and skills in React, TailwindCSS, Node.js, and MongoDB. Visit now to explore my work!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://talakolavijay.vercel.app/" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
-    <title>Vijay Kumar Reddy</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  
+  <meta name="description"
+    content="I'm Matheus da Rosa Silveira, an AWS Certified Full Stack Developer with expertise in React, Node.js, Laravel, Django, and CMS platforms like WordPress and Shopify. Explore my portfolio to see my projects in web and mobile applications, AI tools, and eCommerce solutions." />
+  
+  <meta name="keywords"
+    content="Matheus da Rosa Silveira, Matheus Silveira, Full Stack Developer, AWS Certified, React, Node.js, Laravel, Django, React Native, WordPress, Shopify, CMS Developer, Portfolio, JavaScript, TypeScript, Python, PHP, SQL" />
+  
+  <meta name="author" content="Matheus da Rosa Silveira" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Matheus da Rosa Silveira | Full Stack Developer" />
+  <meta property="og:description"
+    content="AWS Certified Full Stack Developer with experience in building scalable web and mobile applications using React, Node.js, Laravel, Django, and CMS platforms like WordPress and Shopify. Explore my projects and skills." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mts-zeta.vercel.app/" />
+  
+  <!-- Icons & Manifest -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+  
+  <title>Matheus Silveira | Full Stack Developer</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
